<?xml version="1.0"?>
<package format="2">
  <name>first_project</name> <!-- Nome del pacchetto -->
  <version>0.0.0</version> <!-- Versione del pacchetto -->
  <description>
    A project to compute odometry from vehicle data and GPS data.
  </description> <!-- Descrizione del pacchetto -->
  
  <maintainer email="your-email@example.com">Your Name</maintainer> <!-- Tuo nome e email -->
  <author email="author-email@example.com">Author Name</author> <!-- Autore del pacchetto -->
  
  <license>GPL</license> 
  
  <!-- Dipendenze di build -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <!--<build_depend>first_project</build_depend>--> <!-- Include il pacchetto per il messaggio personalizzato --> 

  <!-- Dipendenze di esecuzione -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <!--<exec_depend>first_project</exec_depend> -->

  </package>
